- texts and logo fixes

--- a/app/src/main/assets/html/como_funciona_boniato.html
+++ b/app/src/main/assets/html/como_funciona_boniato.html
@@ -1,30 +1,13 @@
-<h3><span
-        style="color: #800080;"><strong>&iquest;C&oacute;mo funciona la moneda social?</strong></span>
-</h3>
-<p>La moneda social es equivalente al euro. 1 moneda social es igual a 1 euro.</p>
-<p>Si eres una socia <strong>consumidora</strong>: en todas las entidades adscritas al Mercado
-    Social puedes usar moneda social, euro o una combinaci&oacute;n de ambas. Independientemente de
-    qu&eacute; moneda uses, obtendr&aacute;s una <strong>bonificaci&oacute;n</strong> equivalente a
-    un porcentaje de tu compra en moneda social que podr&aacute;s utilizar posteriormente.</p>
-<p>Si eres una <strong>entidad</strong>: cuando una persona consuma tus productos o servicios,
-    recibir&aacute; una bonificaci&oacute;n que se restar&aacute; de tu saldo en moneda social.</p>
-<p>Tu cuenta en moneda social puede tener un descubierto de hasta <strong>500 monedas</strong>, pero
-    &iexcl;ten cuidado! su valor es equivalente al euro y en alg&uacute;n momento podr&iacute;as
-    necesitarlas.</p>
-<p>Para dejar de tener un saldo negativo y conseguir moneda social de nuevo necesitas realizar
-    intercambios de bienes y servicios del MES. As&iacute; recibir&aacute;s bonificaciones y de esta
-    manera ir&aacute;s recuperando tu saldo.</p>
-<p>Si eres una entidad, recuerda que siempre puedes cambiar tu moneda social a euros en caso de que
-    lo necesites, por eso te recomendamos <strong>admitir el 100% del pago en moneda social</strong>.
-    As&iacute; conseguiremos que m&aacute;s gente quiera usar la moneda social y que se realicen
-    intercambios dentro del circuito de la <strong>econom&iacute;a social</strong> y todos saldremos
-    ganando</p>
-<p>&iexcl;Tambi&eacute;n puedes pagar la <strong>cuota del MES</strong> moneda social!</p>
-<hr/>
-<h3><span style="color: #800080;"><strong>Obtener moneda social</strong></span></h3>
-<p>Para obtener moneda social tienes dos opciones:</p>
-<p>Puedes hacer una transferencia bancaria en euros a XXXXXXX y escribir a este mail. XXXXX poniendo
-    tu nombre de usuario del MES y la cantidad que deseas obtener.</p>
-<p>O trav&eacute;s de esta misma app, pulsando el bot&oacute;n <strong>"Obtener boniatos" en el menu</strong> podr&aacute;s comprar moneda
-    social autom&aacute;ticamente introduciendo tu tarjeta de d&eacute;bito/cr&eacute;dito (pago
-    seguro a trav&eacute;s de Stripe)</p>
+<h3><span style="color: #800080;"><strong>&iquest;C&oacute;mo funciona las bonificaciones &eacute;ticas?</strong></span></h3>
+<p>Los etics son equivalentes al euro. <strong>Un etic vale un euro</strong>.</p>
+<p>Si eres una <strong>socia consumidora</strong>: en todas las entidades socias del Mercado Social puedes usar etics, euro o una combinaci&oacute;n de ambas. Independientemente de qu&eacute; uses, obtendr&aacute;s una <strong>bonificaci&oacute;n</strong> en etics equivalente a un porcentaje de tu compra que podr&aacute;s utilizar posteriormente.</p>
+<p>Si eres una <strong>entidad</strong>: cuando una persona consuma tus productos o servicios, recibir&aacute; una bonificaci&oacute;n que se restar&aacute; de tu saldo en etics.</p>
+<p>Tu cuenta en etics puede tener un descubierto de hasta <strong>500 etics</strong>. &iexcl;No te asustes! Para dejar de tener un saldo negativo y conseguir etics para compensar, lo &uacute;nico que necesitas es <strong>realizar intercambios</strong> de bienes y servicios dentro del Mercado Social. As&iacute; recibir&aacute;s bonificaciones y de esta manera ir&aacute;s recuperando tu saldo.</p>
+<p>Si eres una entidad recuerda que siempre puedes <strong>cambiar tus etics a euros</strong> en caso de necesitarlo, por eso te recomendamos que <strong>aceptes el 100%</strong> de pagos en etics. As&iacute; conseguiremos que m&aacute;s gente quiera usar las bonificaicones &eacute;ticas y que se realicen intercambios dentro del <strong>circuito de la econom&iacute;a social</strong>.</p>
+<p>La <strong>cuota</strong> del Mercado Social tambi&eacute;n la puedes pagar en etics.</p>
+<p>&nbsp;</p>
+<hr />
+<h3><span style="color: #800080;"><strong>Obtener etics</strong></span></h3>
+<p>Para obtener etics tienes dos opciones:</p>
+<p>Puedes hacer una transferencia bancaria en euros a XXXXXXX y escribir a este mail. XXXXX poniendo tu nombre de usuario del MES y la cantidad que deseas obtener.</p>
+<p>O trav&eacute;s de esta misma app, pulsando el bot&oacute;n <strong>"Obtener etics" en el menu</strong> podr&aacute;s comprar moneda social autom&aacute;ticamente introduciendo tu tarjeta de d&eacute;bito/cr&eacute;dito (pago seguro a trav&eacute;s de Stripe)</p>
