--- a/app/src/main/assets/html/que_es_mes.html
+++ b/app/src/main/assets/html/que_es_mes.html
@@ -1,19 +1,9 @@
-<h3><span style="color: #800080;"><strong>&iquest;Qu&eacute; es el MES?</strong></span></h3>
-<p>Es una red de producci&oacute;n, distribuci&oacute;n y consumo de bienes y servicios. Est&aacute;
-    constituida por empresas y entidades de la <strong>econom&iacute;a social y solidaria</strong>
-    junto con consumidores y consumidoras. Si quieres ver qu&eacute; entidades lo conforman <a
-            href="https://madrid.mercadosocial.net/catalogo.php" target="_blank" rel="noopener">pincha
-        aqu&iacute;</a>.</p>
-<hr/>
-<h3><br/><span
-        style="color: #800080;"><strong>&iquest;Qu&eacute; es la moneda social?</strong></span></h3>
-<p>La moneda social es una herramienta para conseguir relaciones econ&oacute;micas <strong>igualitarias</strong>
-    y basadas en el trabajo real. Se crea y se destruye en funci&oacute;n de la actividad econ&oacute;mica
-    real que se dan entre las entidades y personas participantes. Es local, no produce intereses y
-    no tiene sentido acumularla.</p>
-<p>La moneda social del MES es equivalente al euro.</p>
-<p>Recuerda que usando moneda social contribuyes a crear un circuito de econom&iacute;a solidaria
-    que ayuda a la econom&iacute;a local, genera empleo digno y es respectuosa con el medio
-    ambiente.</p>
-<p>Si quieres saber m&aacute;s, <a href="https://madrid.mercadosocial.net/" target="_blank"
-                                   rel="noopener">pincha aqu&iacute;</a>.</p>
+<h3><span style="color: #800080;"><strong>&iquest;Qu&eacute; es el Mercado Social?</strong></span></h3>
+<p>Es una red de producci&oacute;n, distribuci&oacute;n y consumo de bienes y servicios. Est&aacute; constituida por empresas y entidades de la <strong>Econom&iacute;a Social y Solidaria</strong> junto con consumidores y consumidoras. Si quieres ver qu&eacute; entidades lo conforman <a href="https://madrid.mercadosocial.net/catalogo.php" target="_blank" rel="noopener">pincha aqu&iacute;</a>.</p>
+<p>&nbsp;</p>
+<hr />
+<h3><br /><span style="color: #800080;"><strong>&iquest;Qu&eacute; son las bonificaciones &eacute;ticas?</strong></span></h3>
+<p>Las bonificaciones &eacute;ticas, llamadas <strong>etics</strong>, son una herramienta para conseguir relaciones econ&oacute;micas <strong>igualitarias</strong> y basadas en el trabajo real. Se crea y se destruye en funci&oacute;n de la actividad econ&oacute;mica real que se dan entre las entidades y personas participantes. Es local, no produce intereses y no tiene sentido acumularla.</p>
+<p><strong>Un etic es equivalente al euro.</strong></p>
+<p>Recuerda que usando <strong>etics</strong> contribuyes a crear un circuito de econom&iacute;a solidaria que ayuda a la <strong>econom&iacute;a local</strong>, genera<strong> empleo digno</strong> y es respectuosa con el <strong>medio ambiente</strong>.</p>
+<p>Si quieres saber m&aacute;s, <a href="https://madrid.mercadosocial.net/" target="_blank" rel="noopener">pincha aqu&iacute;</a>.</p>
