- working to fix entities screen

--- a/app/src/main/assets/html/como_funciona_boniato.html
+++ b/app/src/main/assets/html/como_funciona_boniato.html
@@ -1,4 +1,4 @@
-<h3><span style="color: #800080;"><strong>&iquest;C&oacute;mo funciona las bonificaciones &eacute;ticas?</strong></span></h3>
+<h3><span style="color: #800080;"><strong>&iquest;C&oacute;mo funcionan las bonificaciones &eacute;ticas?</strong></span></h3>
 <p>Los etics son equivalentes al euro. <strong>Un etic vale un euro</strong>.</p>
 <p>Si eres una <strong>socia consumidora</strong>: en todas las entidades socias del Mercado Social puedes usar etics, euro o una combinaci&oacute;n de ambas. Independientemente de qu&eacute; uses, obtendr&aacute;s una <strong>bonificaci&oacute;n</strong> en etics equivalente a un porcentaje de tu compra que podr&aacute;s utilizar posteriormente.</p>
 <p>Si eres una <strong>entidad</strong>: cuando una persona consuma tus productos o servicios, recibir&aacute; una bonificaci&oacute;n que se restar&aacute; de tu saldo en etics.</p>
