--- a/app/src/main/assets/html/que_es_mes.html
+++ b/app/src/main/assets/html/que_es_mes.html
@@ -1,5 +1,5 @@
 <h3><span style="color: #800080;"><strong>&iquest;Qu&eacute; es el Mercado Social?</strong></span></h3>
-<p>Es una red de producci&oacute;n, distribuci&oacute;n y consumo de bienes y servicios. Est&aacute; constituida por empresas y entidades de la <strong>Econom&iacute;a Social y Solidaria</strong> junto con consumidores y consumidoras. Si quieres ver qu&eacute; entidades lo conforman <a href="https://madrid.mercadosocial.net/catalogo.php" target="_blank" rel="noopener">pincha aqu&iacute;</a>.</p>
+<p>Es una red de producci&oacute;n, distribuci&oacute;n y consumo de bienes y servicios, promovida por REAS Madrid. Est&aacute; constituida por empresas y entidades de la <strong>Econom&iacute;a Social y Solidaria</strong> junto con consumidores y consumidoras. Si quieres ver qu&eacute; entidades lo conforman <a href="https://madrid.mercadosocial.net/catalogo.php" target="_blank" rel="noopener">pincha aqu&iacute;</a>.</p>
 <p>&nbsp;</p>
 <hr />
 <h3><br /><span style="color: #800080;"><strong>&iquest;Qu&eacute; son las bonificaciones &eacute;ticas?</strong></span></h3>
