- many changes and fixes - almost ready for final release

--- a/app/src/main/assets/html/como_funciona_boniato.html
+++ b/app/src/main/assets/html/como_funciona_boniato.html
@@ -8,6 +8,5 @@
 <p>&nbsp;</p>
 <hr />
 <h3><span style="color: #800080;"><strong>Obtener etics</strong></span></h3>
-<p>Para obtener etics tienes dos opciones:</p>
-<p>Puedes hacer una transferencia bancaria en euros a XXXXXXX y escribir a este mail. XXXXX poniendo tu nombre de usuario del MES y la cantidad que deseas obtener.</p>
-<p>O trav&eacute;s de esta misma app, pulsando el bot&oacute;n <strong>"Obtener etics" en el menu</strong> podr&aacute;s comprar moneda social autom&aacute;ticamente introduciendo tu tarjeta de d&eacute;bito/cr&eacute;dito (pago seguro a trav&eacute;s de Stripe)</p>
+<p>Para obtener etics sigue los siguientes pasos:<br /><br />1. Pulsa el bot&oacute;n <strong>"Obtener etics"</strong> que puedes encontrar en dos sitios, en el <strong>men&uacute; principal</strong> o en la pantalla "<strong>Monedero</strong>". <br />2. Introduce la <strong>cantidad</strong> que quieras obtener. <br />3. Introduce los datos de la tarjeta. No te preocupes, es un <strong>entorno seguro de pago</strong>. <br />4. &iexcl;<strong>Listo</strong>, ya los tienes!</p>
+<p>&nbsp;</p>
